--- a/kubernetes.yml.template
+++ b/kubernetes.yml.template
@@ -14,7 +14,7 @@ spec:
       labels:
         app: twitter-feed
         commit: ${WERCKER_GIT_COMMIT}
-        color: green
+        color: blue
     spec:
       containers:
       - name: twitter-feed
@@ -24,6 +24,17 @@ spec:
         - name: twitter-feed
           containerPort: ${PORT}
           protocol: TCP
+        volumeMounts:
+            - name: podinfo
+              mountPath: /tmp
+              readOnly: false
+      volumes:
+        - name: podinfo
+          downwardAPI:
+            items:
+            - path: "labels"
+              fieldRef:
+                fieldPath: metadata.labels
       imagePullSecrets:
         - name: wercker
 ---
@@ -40,6 +51,6 @@ spec:
     targetPort: ${PORT}
   selector:
     app: twitter-feed
-    color: green
+    color: blue
   type: ClusterIP
 ---
